--- a/HTML/about.html
+++ b/HTML/about.html
@@ -28,27 +28,43 @@
     <main>
         <section class="aboutContent">
             <section class="aboutRow">
-                <section class="aboutLeft">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum vel esse molestiae cumque et recusandae temporibus nihil ad incidunt est? Modi, libero! Adipisci repellat numquam mollitia, ut ipsum voluptate nemo?</p>
+                <section class="aboutLeft1" onclick="activateRight1()">
+                    <p>Hobbies</p>
+                    <ul class="aboutList">
+                        <li>Gaming</li>
+                        <li>Hiking</li>
+                        <li>Music</li>
+                    </ul>
                 </section>
-                <section class="aboutRight1">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis ea ab soluta dolor in temporibus mollitia. Natus, vero. Est alias vero voluptate velit cumque a eveniet autem quas deleniti non?</p>
-                </section>
-            </section>
-            <section class="aboutRow">
-                <section class="aboutLeft">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium harum fugit quo eligendi sed fugiat repudiandae animi sapiente, commodi tenetur ex corrupti et blanditiis adipisci asperiores quis cumque, eaque omnis!</p>
-                </section>
-                <section class="aboutRight2">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, autem sunt molestiae facilis ullam doloribus ducimus maxime eos ipsa minus quidem sed neque harum sit corporis! Cupiditate quibusdam ratione in?</p>
+                <section class="aboutRight1" id="aboutRight1">
+                    <div class="aboutImg1"></div>
+                    <p class="rightText">I enjoy playing video games with my friends, hiking on trails to enjoy the scenery, and listening to classical music. Typically me and my friends would play Roblox together, but we would also sometimes play Terraria together. I love going on hikes too. The trail I've hiked on the most would be Pincushion Mountain Trail, however the photo above is from a trail somewhere near the bay area in California (I forgot where it was). My favorite type of music is classical music. I love pieces with depth and multiple instruments (particularly stringed instruments) all working in harmony together. One of my favorite orchestras are the Kokyo Active NEETs.</p>
                 </section>
             </section>
             <section class="aboutRow">
-                <section class="aboutLeft">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, nihil! A nam soluta fugit praesentium optio eum earum nesciunt deserunt aspernatur nemo tempore quasi qui totam, voluptates neque. Deleniti, quae!</p>
+                <section class="aboutLeft2" onclick="activateRight2()">
+                    <p>4 Year Plan</p>
+                    <ul class="aboutList">
+                        <li>Fresno State?</li>
+                        <li>Game Designer?</li>
+                        <li>Attorney?</li>
+                    </ul>
                 </section>
-                <section class="aboutRight3">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa quae tenetur, in dignissimos deleniti eaque dolor fugit, optio laudantium animi veniam quasi! Quos non corrupti labore voluptate consequuntur pariatur atque!</p>
+                <section class="aboutRight2" id="aboutRight2">
+                    <p class="rightText">As of right now, I'm a little unsure about the carreer path I'm going to take. When I was little, I always dreamed of being a game developer, but now that I'm older, I need to consider if this is something I want to dedicate years of my life into. I've also looked into the workfield of an attoeny. I know that being an attorney could be a solid job option and could be sustainable, however I'm unsure if I would be able to enjoy the work and work environment. One of the colleges I considered was Fresno State, solely because all my siblings went there and have experience with it, and also because it's close to home. I haven't completely filed out the option of going out-of-state for a college though, and would be happy to move if I found a college I really wanted to get into. I'll probably look into more carreer paths that catch my interest until I find something that I'll consider trying out a bit. Next year, I'm either going to be in the Law in Policy class or the Interactive Game Design class at CART.</p>
+                </section>
+            </section>
+            <section class="aboutRow">
+                <section class="aboutLeft3" onclick="activateRight3()">
+                    <p>Writing</p>
+                        <ul class="aboutList">
+                            <li>Lemon Story</li>
+                            <li>The Red Balloon</li>
+                        </ul>
+                </section>
+                <section class="aboutRight3" id="aboutRight3">
+                    <div class="aboutImg2"></div>
+                    <p class="rightText">In my Sophomore year of highschool, during our "Fear" unit, we had to create a short story about a traumatic event, so I decided to write it about how the protagonist gained a phobia torward lemons. The main purpose of thta writing was to practice descriptive writing, so I was sure to add as much sensory details as I could. The image above shows the fake newpaper I wrote about the story "The Red Balloon" and its ending. I wrote the newspaper about how the main character was carried off into the sky by balloons after his friend, which was a red balloon, was popped.</p>
                 </section>
             </section>
         </section>
