--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -32,18 +32,21 @@
         <a  href="https://www.linkedin.com/in/mark-yang-bb9610275/">
         <section class="pushinP">
             <h2>LinkedIn</h2>
+            <img src="../images/linkedin.png" class="contactImg">
             <p>Check out my newly created LinkedIn Profile</p>
         </section>
         </a>
         <a href="mailto:mark.yang@cart.student.org">
         <section class="pushinP">
             <h2>G-mail</h2>
+            <img src="../images/gmail.png" class="contactImg">
             <p>If you need to contact me, do so with this</p>
         </section>
         </a>
         <section class="pushinP">
             <h2>Phone Number</h2>
-            <p>Don't actually call me please</p>
+            <img src="../images/phone.png" class="contactImg">
+            <p>559-720-5823 Don't actually call me please</p>
         </section>
     </main>
 
