--- a/HTML/resume.html
+++ b/HTML/resume.html
@@ -80,8 +80,8 @@
         </section>
         <section class="PDFcontainer">
             <section class="PDFsection">
-                <a class="PDFthingy" href="../  imagesMarkYangPortfoliolio.pdf">Resume    PDF<a>
-                <a class="PDFthingy " href="">Letterof   Reccomendation</a>
+                <a class="PDFthingy" href="../images/MarkYangPortfoliolio.pdf">Resume PDF<a>
+                <a class="PDFthingy " href="">Letter of Reccomendation</a>
             </section> 
         </section>
     </main>
