fitted the HTML and CSS files to be compatible with the new compressed images

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <section class="quadrant">
                     <div class="imgContainer">
                         <a href="HTML/delvehomes.html">
-                            <img  src="../images/DelveHomes1.jpeg">
+                            <img  src="../images/DelveHomes1.jpg">
                         </a>
                     </div>
                     <article class="txtContainer">
@@ -54,7 +54,7 @@
                 <section class="quadrant">
                     <div class="imgContainer">
                         <a href="HTML/phishing.html">
-                            <img src="../images/Phishing1.jpeg">
+                            <img src="../images/Phishing1.jpg">
                         </a>
                     </div>
                     <article class="txtContainer">
@@ -67,7 +67,7 @@
                 <section class="quadrant">
                     <div class="imgContainer">
                         <a href="HTML/coursera.html">
-                            <img src="../images/Coursera1.jpeg">
+                            <img src="../images/Coursera1.jpg">
                         </a>
                     </div>
                     <article class="txtContainer">
@@ -78,7 +78,7 @@
                 <section class="quadrant">
                     <div class="imgContainer">
                         <a href="HTML/tariff.html">
-                            <img  src="../images/TariffMonopoly1.jpeg">
+                            <img  src="../images/TariffMonopoly1.jpg">
                         </a>
                     </div>
                     <article class="txtContainer">
